--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,40 @@
       </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<div id='modalEditar' class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Datos del Doctor</h4>
+      </div>
+
+      <div class="modal-body">
+            <form>
+                      <div class="form-group">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" class="form-control" id="editarNombre" placeholder=''>
+                      </div>
+                      <div class="form-group">
+                        <label for="numColegiado">Nº de colegiado</label>
+                        <input type="text" class="form-control" id="numColegiado">
+                      </div>
+                      <div class="form-group">
+                            <label>Clinicas</label>
+                            <select multiple class="form-control" id='selectEditar'>
+                            </select>
+                      </div>
+            </form>
+      </div>
+
+      <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary confirmarEditarbtn">Guardar</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
