editar corregido (select de clinicas con error )

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
                 </div>
     </div>
 
-<div id='modalBorrar' class="modal fade">
+<div class="modal fade" id='modalBorrar'>
       <div class="modal-dialog">
             <div class="modal-content">
                   <div class="modal-header">
@@ -58,14 +58,14 @@
                         <p>¿Seguro que quieres borrar el doctor?</p>
                   </div>
                   <div class="modal-footer">
-                        <button id='cancelar' type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                         <button type="button" class="btn btn-primary confirmarBorrar">Borrar</button>
                   </div>
             </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div id='modalEditar' class="modal fade">
+<div class="modal fade" id='modalEditar'>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -106,6 +106,7 @@
     <script src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/growl/javascripts/jquery.growl.js"></script>
+    <script src="bower_components/validate/validate.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
