añadido a servidor la accion nuevo

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,13 @@
                     <p>Natalia Jiménez Sánchez</p>
                 </div>
 
+                <div id='barra' class="btn-group" role="group" aria-label="...">
+                  <button type="button" class="btn btn-default nuevo">Nuevo Doctor</button>
+                  <button type="button" class="btn btn-default">Excel</button>
+                  <button type="button" class="btn btn-default">PDF</button>
+                  <button type="button" class="btn btn-default">Imprimir</button><br>
+                </div>
+
                 <div id='tabla'>
                         <table id="datatable" class="table">
                                 <thead>
