--- a/app/index.html
+++ b/app/index.html
@@ -23,13 +23,14 @@
                 <div class="jumbotron">
                     <h2>Doctores</h2>
                     <p>Natalia Jiménez Sánchez</p>
+                    <a href='https://github.com/nataliajs/practica-ajax-datatables'>Repositorio GitHub</a>
                 </div>
 
                 <div id='barra' class="btn-group" role="group" aria-label="...">
                   <button type="button" class="btn btn-default nuevo">Nuevo Doctor</button>
                   <button type="button" class="btn btn-default">Excel</button>
                   <button type="button" class="btn btn-default">PDF</button>
-                  <button type="button" class="btn btn-default">Imprimir</button><br>
+                  <button type="button" class="btn btn-default">Imprimir</button>
                 </div>
 
                 <div id='tabla'>
@@ -53,6 +54,7 @@
                         </table>
                 </div>
     </div>
+
 
 <div class="modal fade" id='modalBorrar'>
       <div class="modal-dialog">
